[gd_scene load_steps=37 format=3 uid="uid://iviyiy2qotsm"]

[ext_resource type="Script" uid="uid://c80uwe0iluece" path="res://Scripts/Rooms/boss_room_1.gd" id="1_hnpp2"]
[ext_resource type="Texture2D" uid="uid://c1lo75th7b88g" path="res://Textures/icon.svg" id="1_tjvdc"]
[ext_resource type="PackedScene" uid="uid://be53snhq2r11i" path="res://Scenes/player.tscn" id="2_hnpp2"]
[ext_resource type="Animation" uid="uid://bhkqidi0qd30h" path="res://bone_rain.res" id="3_286j2"]
[ext_resource type="Script" uid="uid://c0r8ikcl8si3u" path="res://Scripts/Enemies/boss.gd" id="4_w82vf"]
[ext_resource type="PackedScene" uid="uid://bqo6qnqcmww4y" path="res://Scenes/UI/health_bar.tscn" id="5_sufch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w82vf"]
size = Vector2(22, 610)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ly2s5"]
size = Vector2(1744, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v638s"]
size = Vector2(1191, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuilr"]
size = Vector2(711, 19.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5y65l"]
size = Vector2(772.368, 19.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjvdc"]
size = Vector2(237, 20)

[sub_resource type="Animation" id="Animation_hnpp2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(862, 658)]
}

[sub_resource type="Animation" id="Animation_tjvdc"]
resource_name = "lower"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Vector2(862, 658), Vector2(862, 950)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w82vf"]
_data = {
&"RESET": SubResource("Animation_hnpp2"),
&"lower": SubResource("Animation_tjvdc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnpp2"]
size = Vector2(251.5, 20)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p7duw"]
_data = {
&"bone_rain": ExtResource("3_286j2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8t2r"]
size = Vector2(880, 395)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vvxw6"]
size = Vector2(41, 235)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya6cy"]
size = Vector2(22, 182)

[sub_resource type="Animation" id="Animation_u78rf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Entrance:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -179)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_71aqr"]
resource_name = "close"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Entrance:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -179), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vvxw6"]
resource_name = "open"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exit:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -179)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmk8r"]
_data = {
&"RESET": SubResource("Animation_u78rf"),
&"close": SubResource("Animation_71aqr"),
&"open": SubResource("Animation_vvxw6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sufch"]
size = Vector2(67, 279.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_286j2"]
size = Vector2(67, 279.5)

[sub_resource type="Animation" id="Animation_286j2"]
resource_name = "phase"
length = 10.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Trapforms:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(862, 658), Vector2(862, 658), Vector2(862, 1500)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../BossPushers:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.72, 1), Vector2(0.72, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BossBounce:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.71, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sufch"]
_data = {
&"phase": SubResource("Animation_286j2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71aqr"]
size = Vector2(116, 223)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7duw"]
size = Vector2(118, 223)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u78rf"]
size = Vector2(120, 225)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w82vf"]
radius = 13.1839
height = 172.658

[sub_resource type="Animation" id="Animation_ly2s5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smash/Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Smash/Pivot/CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.436332]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Smash/Pivot/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Platforms:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Platforms:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Platforms:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Trapforms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(862, 658)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../BossPushers:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../BossBounce:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(860, -250)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../ArenaCam:zoom")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../ArenaCam:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(867, 455)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".:collision_layer")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [130]
}

[sub_resource type="Animation" id="Animation_p7duw"]
resource_name = "intro"
length = 3.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 3.5),
"transitions": PackedFloat32Array(2.07053, 1, 1),
"update": 0,
"values": [Vector2(860, -250), Vector2(860, 534), Vector2(860, 534)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ArenaCam:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.5, 1.5), Vector2(0.658, 0.658)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ArenaCam:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.9, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(867, 455), Vector2(867, 455), Vector2(867, 300)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [130, 131]
}

[sub_resource type="Animation" id="Animation_w82vf"]
resource_name = "smash"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smash/Pivot/CollisionShape2D:disabled")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Smash/Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 2.0944, 2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Smash/Pivot/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.436332, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v638s"]
_data = {
&"RESET": SubResource("Animation_ly2s5"),
&"intro": SubResource("Animation_p7duw"),
&"smash": SubResource("Animation_w82vf")
}

[node name="BossRoom" type="Node2D"]
script = ExtResource("1_hnpp2")

[node name="Floors-Walls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(11.5, 188)
scale = Vector2(0.179687, 4.39062)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D2" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(1722, 188.25)
scale = Vector2(0.179687, 4.39453)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D3" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(861, -102)
scale = Vector2(13.625, 0.15625)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D4" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(863, 658)
scale = Vector2(9.309, 0.156)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D5" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(-333, 658)
scale = Vector2(5.537, 0.156)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D6" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(2096.37, 657.984)
scale = Vector2(6.02138, 0.156)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(11, 188)
shape = SubResource("RectangleShape2D_w82vf")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(1721, 212)
shape = SubResource("RectangleShape2D_w82vf")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(862, -102.5)
shape = SubResource("RectangleShape2D_ly2s5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(862.5, 657.5)
shape = SubResource("RectangleShape2D_v638s")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(-333.5, 658.25)
shape = SubResource("RectangleShape2D_vuilr")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(2096.18, 658.234)
shape = SubResource("RectangleShape2D_5y65l")

[node name="Trapforms" type="StaticBody2D" parent="."]
position = Vector2(862, 658)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D2" type="Sprite2D" parent="Trapforms"]
position = Vector2(720, 0)
scale = Vector2(1.89062, 0.15625)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D" type="Sprite2D" parent="Trapforms"]
position = Vector2(-716, -3.8147e-06)
scale = Vector2(1.85938, 0.15625)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trapforms"]
position = Vector2(-716.5, 0)
shape = SubResource("RectangleShape2D_tjvdc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Trapforms"]
position = Vector2(720, 0)
shape = SubResource("RectangleShape2D_tjvdc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Trapforms"]
libraries = {
&"": SubResource("AnimationLibrary_w82vf")
}

[node name="Platforms" type="StaticBody2D" parent="."]
position = Vector2(862, 491)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Platforms"]
position = Vector2(-420, 0.499994)
scale = Vector2(1.96875, 0.164062)
texture = ExtResource("1_tjvdc")

[node name="Sprite2D2" type="Sprite2D" parent="Platforms"]
position = Vector2(420, 0.5)
scale = Vector2(1.96875, 0.164062)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms"]
position = Vector2(-420, 0)
shape = SubResource("RectangleShape2D_hnpp2")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Platforms"]
position = Vector2(420, 0)
shape = SubResource("RectangleShape2D_hnpp2")
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms"]
libraries = {
&"": SubResource("AnimationLibrary_p7duw")
}

[node name="DoorChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorChecker"]
position = Vector2(-250, 470.5)
shape = SubResource("RectangleShape2D_b8t2r")

[node name="CheckDoor" type="Timer" parent="DoorChecker"]
wait_time = 0.5
autostart = true
ignore_time_scale = true

[node name="BossBounce" type="Area2D" parent="."]
position = Vector2(865, 488)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBounce"]
position = Vector2(-838, 63.5)
shape = SubResource("RectangleShape2D_vvxw6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BossBounce"]
position = Vector2(832.5, 67)
shape = SubResource("RectangleShape2D_vvxw6")

[node name="Doors" type="Node2D" parent="."]

[node name="Entrance" type="StaticBody2D" parent="Doors"]
position = Vector2(0, -179)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Doors/Entrance"]
position = Vector2(11, 557.5)
scale = Vector2(0.171875, 1.41406)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Entrance"]
position = Vector2(11, 557)
shape = SubResource("RectangleShape2D_ya6cy")

[node name="Exit" type="StaticBody2D" parent="Doors"]
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Doors/Exit"]
position = Vector2(1721, 557.5)
scale = Vector2(0.171875, 1.41406)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Exit"]
position = Vector2(1721, 557)
shape = SubResource("RectangleShape2D_ya6cy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Doors"]
libraries = {
&"": SubResource("AnimationLibrary_xmk8r")
}

[node name="BossPushers" type="StaticBody2D" parent="."]
position = Vector2(879, 542)
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossPushers"]
position = Vector2(-891.5, -12.75)
shape = SubResource("RectangleShape2D_sufch")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BossPushers"]
position = Vector2(847, -19)
shape = SubResource("RectangleShape2D_286j2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BossPushers"]
libraries = {
&"": SubResource("AnimationLibrary_sufch")
}

[node name="ArenaCam" type="Camera2D" parent="."]
position = Vector2(867, 455)
enabled = false
zoom = Vector2(1.5, 1.5)

[node name="Player" parent="." instance=ExtResource("2_hnpp2")]
position = Vector2(-509, 540)

[node name="Boss" type="CharacterBody2D" parent="." node_paths=PackedStringArray("bone_positions") groups=["Enemies"]]
position = Vector2(860, -250)
collision_layer = 130
collision_mask = 128
script = ExtResource("4_w82vf")
bone_positions = NodePath("../BoneRainGroup")
speed = 60
hp = 1000
max_hp = 1000
parry_damage = 0
parry_knockback_mult = 0
can_be_knockedback = false
damage_number_scale = 4.0

[node name="BossSprite" type="Sprite2D" parent="Boss"]
scale = Vector2(0.998, 1.775)
texture = ExtResource("1_tjvdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_71aqr")

[node name="RibReturn" type="Area2D" parent="Boss" groups=["Enemies"]]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/RibReturn"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_p7duw")

[node name="CollisionDamage" type="Area2D" parent="Boss"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/CollisionDamage"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_u78rf")

[node name="Smash" type="Node2D" parent="Boss"]

[node name="Pivot" type="Area2D" parent="Boss/Smash"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Smash/Pivot"]
position = Vector2(-11, -151)
rotation = -0.436332
shape = SubResource("CapsuleShape2D_w82vf")
disabled = true
debug_color = Color(0.954773, 0.175863, 0.315043, 0.42)

[node name="WeaponEnd" type="Marker2D" parent="Boss/Smash/Pivot"]
position = Vector2(-1.77312, -231.071)

[node name="ChooseAttack" type="Timer" parent="Boss"]
wait_time = 3.0
one_shot = true
ignore_time_scale = true

[node name="HealthBar" parent="Boss" instance=ExtResource("5_sufch")]

[node name="Attacks" type="AnimationPlayer" parent="Boss"]
libraries = {
&"": SubResource("AnimationLibrary_v638s")
}

[node name="BoneRainGroup" type="HBoxContainer" parent="."]
offset_left = 85.0
offset_right = 1639.0
theme_override_constants/separation = 111

[node name="Container" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container2" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container3" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container4" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container5" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container6" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container7" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container8" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container9" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container10" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container11" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container12" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container13" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container14" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[node name="Container15" type="Container" parent="BoneRainGroup"]
layout_mode = 2

[connection signal="timeout" from="DoorChecker/CheckDoor" to="." method="_on_check_door_timeout"]
[connection signal="body_entered" from="BossBounce" to="Boss" method="_on_boss_bounce_body_entered"]
[connection signal="dead" from="Boss" to="." method="_on_boss_dead"]
[connection signal="body_entered" from="Boss/CollisionDamage" to="Boss" method="_on_collision_damage_body_entered"]
[connection signal="body_entered" from="Boss/Smash/Pivot" to="Boss" method="_on_smash_body_entered"]
[connection signal="timeout" from="Boss/ChooseAttack" to="Boss" method="_on_choose_attack_timeout"]
